# wgpu

./: .gitignore  Cargo.toml  Makefile  README.md  temp.rs
examples/: boids_compute.rs  boids_graphics.rs  boids_image.rs  cube.rs  cube_nested_struct.rs  cube_shadow.rs  cube_texture.rs  hello_compute.rs  hello_triangle.rs  hello_triangle_old.rs  multicube.rs  shader.comp  shadow.rs  sink.rs  skybox_texture.rs  sphere.rs  teacup.rs  teapot.rs  trivial_compute.rs  trivial_compute_external.rs  trivial_compute_invalid.rs  trivial_pipeline.rs  write_compute.rs
examples/gator_examples/: flat_color.rs
examples/negative_examples/: incorrect_vec_bound_length.rs  misspelled_bound.rs  mistyped_binding.rs  pipeline_mismatch.rs  reading_unbound_out.rs  variable_bound_twice.rs  variable_not_bound.rs  why_we_need_scoping.rs
examples/trivial_compute_external/: main.rs  shader.rs
src/: align.rs  bind.rs  context.rs  debug.rs  helper.rs  lib.rs  main.rs  main_triangle.rs  read.rs  shader.comp  shader.frag  shader.vert  shared.rs  wgpu_compute_header.rs  wgpu_graphics_header.rs  write.rs
wgpu_macros/: Cargo.toml
wgpu_macros/examples/: eager_macro_attempt.rs  first_attempt.rs
wgpu_macros/src/: generic_bindings.rs  get_view.rs  graphics_program.rs  lib.rs
writeup/: .gitignore  writeup.tex
