[package]
name = "wgpu"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Pat-Lafon/wgpu.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
log = "0.4"
env_logger = "0.7"
winit = "0.22"
# shaderc = "0.6"
glsl-to-spirv = "0.1"
futures = "0.3"
bytemuck = "1.2.0"
zerocopy = "0.3.0"
