[package]
name = "pipeline"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Pat-Lafon/wgpu.git"
features = ["const_loop", "const_panic", "const_fn", "const_if_match"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eager = "0.1.0"
regex = "1"
obj-rs = "0.6.1"
wgpu = "0.6.0"
winit = "0.24"
cgmath = "0.18"
glsl-to-spirv = "0.1"
futures = "0.3"
png = "0.16"
bytemuck = "1.2.0"
zerocopy = "0.3.0"

[dependencies.wgpu_macros]
version = "0.1.0"
path = "wgpu_macros"

[[example]]
name = "flat_color"
path = "examples/gator_examples/flat_color.rs"

[[example]]
name = "why_we_need_scoping"
path = "examples/negative_examples/why_we_need_scoping.rs"
