[package]
name = "wgpu_macros"
version = "0.1.0"
authors = ["Patrick LaFontaine <32135464+Pat-Lafon@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
naga = { version = "0.4.0", features = ["wgsl-in"] }
itertools = "0.10"
rand = "0.8"
wgpu = "0.7"
